# mycoder

./: .gitignore  README.md  pyproject.toml
docs/: CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  README.md  api-reference.md  architecture.md  getting-started.md  llm-providers.md  project-summary.md  review.md  tools.md
docs/examples/: mcp_usage.md  provider_switching.md  simple_usage.md
mycoder/: settings.py
mycoder/agent/: __init__.py  tool_manager.py
mycoder/agent/llm/: __init__.py  anthropic.py  base.py  exceptions.py  ollama.py
mycoder/agent/mcp/: __init__.py  client.py  tools.py
mycoder/agent/tools/: __init__.py  base.py  file_ops.py  session.py  shell.py  sleep.py  sub_agent.py  text_editor.py  think.py  user.py
mycoder/cli/: main.py  options.py
mycoder/cli/commands/: __init__.py  tools_cmd.py
mycoder/settings/: config.py
mycoder/utils/: errors.py  logging.py
src/mycoder/: settings.py
src/mycoder/agent/: __init__.py  tool_manager.py
src/mycoder/agent/llm/: __init__.py  base.py  openai.py  test_anthropic.py  test_openai.py
src/mycoder/agent/mcp/: client.py  tools.py
src/mycoder/agent/tools/: __init__.py  browser.py  fetch.py  file_ops.py  shell.py  sub_agent.py  user.py
src/mycoder/cli/: main.py  options.py
src/mycoder/cli/commands/: __init__.py  tools_cmd.py
src/mycoder/settings/: config.py
src/mycoder/utils/: errors.py  logging.py
tests/agent/llm/: test_ollama.py
tests/agent/mcp/: test_client.py  test_mcp_client.py  test_mcp_tools.py
tests/agent/tools/: test_browser.py  test_fetch.py  test_session.py  test_sub_agent.py  test_think.py
